form data forward set to ajfiresolutions22@gmail.com

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -801,3 +801,9 @@ footer .subscribe form button {
   overflow: hidden;
   height: 0;
 }
+
+.hidden {
+  position: fixed;
+  left: -2000px;
+  top: -2000px;
+}
