--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -125,6 +125,8 @@ p {
 
 .hero {
   background: #f19b38;
+  background-position: 100% 100%;
+  background-size: cover;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -161,14 +163,15 @@ p {
 }
 @media (min-width: 992px) {
   .hero h2 {
-    font-size: 49px;
     color: #f19b38;
+    font-size: 49px;
   }
 }
 .hero p {
   font-weight: 500;
   font-size: 18px;
   line-height: 140%;
+  color: #ffffff;
   color: #333333;
   max-width: 490px;
   margin-bottom: 40vh;
