--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -734,6 +734,12 @@ footer .email {
   margin-left: 34px;
   position: relative;
 }
+footer a {
+  font-weight: 400;
+  font-size: 16px;
+  color: #ffffff;
+  text-decoration: none;
+}
 footer .email {
   margin-bottom: 0;
 }
